Updated all mobile design MVP

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,10 @@ nav{
     display:flex;
     justify-content:space-evenly;
     margin-top:5%;
+
+    @media @mobile {
+       width: 75%;
+    }
 }
 nav a{
     color:#626262;
