--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,11 @@ nav {
   justify-content: space-evenly;
   margin-top: 5%;
 }
+@media (max-width:500px) {
+  nav {
+    width: 75%;
+  }
+}
 nav a {
   color: #626262;
 }
@@ -168,11 +173,21 @@ nav span {
   height: 60vh;
   margin: 5% 0;
 }
+@media (max-width:500px) {
+  .title-container div {
+    width: 100%;
+  }
+}
 .title-container div:hover {
   opacity: 80%;
 }
 .title-container hr {
   width: 80%;
+}
+@media (max-width:500px) {
+  .title-container hr {
+    width: 100%;
+  }
 }
 button {
   padding: 1% 3%;
@@ -195,9 +210,20 @@ button:hover {
   width: 80%;
   margin: 0 auto;
 }
+@media (max-width:500px) {
+  .artists-container {
+    flex-direction: column;
+  }
+}
 .artist {
   width: 40%;
   text-align: center;
+}
+@media (max-width:500px) {
+  .artist {
+    width: 100%;
+    text-align: center;
+  }
 }
 .artist img {
   width: 100%;
