--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,12 +15,20 @@
     align-items: center;
     height:60vh;
     margin:5% 0;
+
+    @media @mobile {
+        width:100%;
+    }
 }	
 .title-container div:hover {	
     opacity: 80%;	
 }	
 .title-container hr{
     width:80%;
+
+    @media @mobile {
+        width: 100%;
+    }
 }
 button{
     padding:1% 3%;
@@ -42,10 +50,19 @@ button:hover{
     justify-content: space-around;
     width:80%;
     margin:0 auto;
+
+    @media @mobile {
+        flex-direction: column;
+    }
 }
 .artist{
     width:40%;
     text-align:center;
+
+    @media @mobile {
+        width: 100%;
+        text-align: center;
+    }
 }
 .artist img{
     width:100%;
